update media file

--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -1,7 +1,7 @@
 .form {
     padding: 60px 7px;
     &__bg {
-        padding: 57px 50px 58px 60px;
+        padding: 50px;
         background: $style-color;
         border-radius: 30px;
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
