--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -29,11 +29,13 @@
             transition: all .2s linear;
 
             &:hover {
+                display: inline-block;
                 background-color: $main-color;
                 color: #fff;
             }
         }
         & .active {
+            display: inline-block;
             background-color: $main-color;
             color: #fff !important;
             border-radius: 10px;
