--- a/src/sass/blocks/_faqs.scss
+++ b/src/sass/blocks/_faqs.scss
@@ -53,6 +53,9 @@
         line-height: 24px;
         color: $text-color;
         transition: all .35s;
+        p {
+            margin-bottom: 0;
+        }
     }
     // &-close {
     //     display: flex;
