--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -11,6 +11,9 @@
             transform: scale(1.07);
             z-index: 99;
         }
+        &-mt {
+            margin-top: 30px;
+        }
     }
     &__category {
         font-weight: 700;
