ÐChange style stages price

--- a/src/sass/blocks/_banner.scss
+++ b/src/sass/blocks/_banner.scss
@@ -33,6 +33,9 @@
         font-size: 17px;
         font-weight: 700;
         color: #fff;
+        &:hover {
+            color: #fff;
+        }
         i {
             margin-right: 4px;
             font-size: 18px;
