--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -13,6 +13,8 @@
     } 
     &-price {
         padding: 16px 50px;
+        width: 100%;
+        text-align: center;
     }
     &:hover {
         background: transparent;
