--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    padding: 5px 0;
+    padding: 5px 20px;
     position: relative;
     background-color: #fff !important;
     z-index: 99;
@@ -9,6 +9,7 @@
         position: absolute;
         width: 100%;
         bottom: 0;
+        left: 0;
         border-bottom: 2px solid $main-color;
     }
 
