--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -1,14 +1,14 @@
 .price {
-    padding: 60px 15px;
+    padding: 20px 15px;
     &__bg {
         background: #FFFFFF;
         border-radius: 19px;
         padding: 38px 60px 42px 60px;
-        box-shadow: 0 14px 28px rgba(198, 194, 194, 0.25), 0 10px 10px rgba(95, 90, 90, 0.22);
+        box-shadow: 0 14px 28px rgba(198, 194, 194, 1.25), 0 10px 10px rgba(95, 90, 90, 0.22);
         z-index: 1;
         transition: all .2s linear;
         &:hover {
-            transform: scale(1.07);
+            transform: scale(1.03);
             z-index: 99;
         }
     }
@@ -42,5 +42,14 @@
         font-size: 14px;
         line-height: 123.19%;
         color: #2D2D2D;
+    }
+    &__mb {
+        margin-bottom: 78px;
+    }
+    &__pl {
+        padding-left: 0;
+    }
+    &__pr {
+        padding-left: 0;
     }
 }
