--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -468,9 +468,6 @@
             width: 350px;
             &-ofset {
                 margin: 0 auto;
-                &:nth-child(1) {
-                    margin-bottom: 25px;
-                }
             }
         }
         &__category {
@@ -506,7 +503,7 @@
                 padding-bottom: 15px;
             }
         }
-    } 
+    }
 }
 @media (max-width: 425px) {
     .btn-show-pulse {
@@ -535,14 +532,8 @@
     }
     .price {
         &__bg  {
-            padding: 30px;
+            padding: 25px;
             width: 320px;
-            &-ofset {
-                // margin: 0 auto
-                &:nth-child(1) {
-                    margin-bottom: 25px;
-                }
-            }
         }
         &__category {
             font-size: 23px;
@@ -558,10 +549,6 @@
             margin: 20px 0;
         }
     }
-    .faq {
-        display: none;
-        padding: 30px 0;
-    }
     // Layout
     .row {
         display:flex;
@@ -576,10 +563,10 @@
     }
     .tab {
         &-label {
-            font-size: 16px;
+            font-size: 15px;
         }
     }
-    .map {;
+    .map {
         &__btn {
             margin-top: 30px;
             text-align: center;
@@ -669,16 +656,9 @@
         }
     }
     .price {
-        padding: 0;
         &__bg  {
-            padding: 25px;
-            width: 300px;
-            &-ofset {
-                margin: 0 auto;
-                &:nth-child(1) {
-                    margin-bottom: 25px;
-                }
-            }
+            padding: 15px;
+            width: 285px;
         }
         &__category {
             font-size: 19px;
