--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,9 +9,11 @@
 }
 
 a {
+    color: #fff;
     text-decoration: none;
     &:hover {
         text-decoration: none;
+      color: #fff;
     }
 }
 
